# python-comms-search-tech-test

./: .gitignore  NOTES.md  README.md  package-lock.json  package.json  pyproject.toml
api/: auth.py  main.py
app/routes/: _layout.dashboard.tsx  _layout.search_.results.$message_id.tsx  _layout.search_.results.tsx
scripts/: init.ts
